part of tests added