@@ -16,7 +16,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.io.IOException;
 import java.io.PrintWriter;
-import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.StringJoiner;
@@ -29,13 +28,11 @@ public class TaskWebController {
     private final TaskService taskService;
     private final CategoryService categoryService;
 
-    // Strona główna
     @GetMapping
     public String index() {
         return "index";
     }
 
-    // Lista zadań z filtrami i paginacją
     @GetMapping("/tasks")
     public String listTasks(
             @RequestParam(required = false) TaskStatus status,
@@ -44,34 +41,14 @@ public class TaskWebController {
             @RequestParam(required = false) LocalDate dueDateAfter,
             @RequestParam(required = false) String title,
             @RequestParam(defaultValue = "0") int page,
-            @RequestParam(defaultValue = "10") int size,
+            @RequestParam(defaultValue = "9") int size,
             @RequestParam(defaultValue = "createdAt,desc") String sort,
             Model model) {
 
-        page = Math.max(0, page);
-        size = Math.min(100, Math.max(1, size));
-
-        Sort.Direction direction = Sort.Direction.DESC;
-        String property = "createdAt";
-
-        if (sort != null && sort.contains(",")) {
-            String[] parts = sort.split(",");
-            property = parts[0];
-            if (parts.length > 1) {
-                direction = "asc".equalsIgnoreCase(parts[1]) ? Sort.Direction.ASC : Sort.Direction.DESC;
-            }
-        }
-
-        // Mapowanie nazw z URL na pola encji
-        property = switch (property) {
-            case "dueDate", "due_date" -> "dueDate";
-            case "createdAt", "created_at" -> "createdAt";
-            case "updatedAt", "updated_at" -> "updatedAt";
-            default -> property;
-        };
-
-        Pageable pageable = PageRequest.of(page, size, Sort.by(direction, property));
-        Page<TaskDto> tasks = taskService.getAllTasks(status, categoryId, dueDateBefore, dueDateAfter, title, pageable);
+        // Wywołanie serwisu, który sam obsłuży paginację i sortowanie
+        Page<TaskDto> tasks = taskService.getTasksWithFilters(
+                status, categoryId, dueDateBefore, dueDateAfter, title, page, size, sort
+        );
 
         model.addAttribute("tasks", tasks);
         model.addAttribute("categories", categoryService.getAllCategories());
@@ -80,93 +57,102 @@ public class TaskWebController {
         return "tasks/list";
     }
 
+
     private String buildQueryParams(TaskStatus status, Long categoryId, LocalDate before, LocalDate after,
                                     String title, int size, String sort) {
+
         StringJoiner joiner = new StringJoiner("&");
+
         if (status != null) joiner.add("status=" + status);
         if (categoryId != null) joiner.add("categoryId=" + categoryId);
         if (before != null) joiner.add("dueDateBefore=" + before);
         if (after != null) joiner.add("dueDateAfter=" + after);
-        if (title != null && !title.isBlank()) joiner.add("title=" + title);
+        if (title != null && !title.trim().isEmpty()) joiner.add("title=" + title.trim());
+
         joiner.add("size=" + size);
-        if (sort != null && !sort.isEmpty()) joiner.add("sort=" + sort);
-        return joiner.length() > 0 ? joiner.toString() : "";
+        if (sort != null && !sort.isBlank()) joiner.add("sort=" + sort);
+
+        String params = joiner.toString();
+
+        return params.isEmpty() ? "" : "&" + params;
     }
 
-    // Formularz nowego zadania
     @GetMapping("/tasks/new")
     public String newTask(Model model) {
         model.addAttribute("task", new TaskCreateDto());
         model.addAttribute("categories", categoryService.getAllCategories());
         model.addAttribute("pageTitle", "Nowe zadanie");
+        model.addAttribute("taskId", null);
         return "tasks/form";
     }
 
-    // Tworzenie nowego zadania
     @PostMapping("/tasks")
-    public String createTask(@Valid @ModelAttribute("task") TaskCreateDto taskCreateDto,
+    public String createTask(@Valid @ModelAttribute("task") TaskCreateDto dto,
                              BindingResult result, Model model) {
         if (result.hasErrors()) {
             model.addAttribute("categories", categoryService.getAllCategories());
             model.addAttribute("pageTitle", "Nowe zadanie");
+            model.addAttribute("taskId", null);
             return "tasks/form";
         }
-        taskService.createTask(taskCreateDto);
+        taskService.createTask(dto);
         return "redirect:/tasks";
     }
 
-    // Formularz edycji zadania
     @GetMapping("/tasks/{id}")
     public String editTask(@PathVariable Long id, Model model) {
-        TaskDto task = taskService.getTaskById(id);
-        model.addAttribute("task", task);
+        TaskDto taskDto = taskService.getTaskById(id);
+        TaskCreateDto dto = taskService.toCreateDto(taskDto);
+        model.addAttribute("task", dto);
         model.addAttribute("categories", categoryService.getAllCategories());
         model.addAttribute("pageTitle", "Edytuj zadanie");
+        model.addAttribute("taskId", id);
         return "tasks/form";
     }
 
-    // Aktualizacja zadania
     @PostMapping("/tasks/{id}")
     public String updateTask(@PathVariable Long id,
-                             @Valid @ModelAttribute("task") TaskCreateDto taskUpdateDto,
+                             @Valid @ModelAttribute("task") TaskCreateDto dto,
                              BindingResult result, Model model) {
         if (result.hasErrors()) {
             model.addAttribute("categories", categoryService.getAllCategories());
             model.addAttribute("pageTitle", "Edytuj zadanie");
+            model.addAttribute("taskId", id);
             return "tasks/form";
         }
-        taskService.updateTask(id, taskUpdateDto);
+        taskService.updateTask(id, dto);
         return "redirect:/tasks";
     }
 
-    // Usuwanie zadania
     @PostMapping("/tasks/{id}/delete")
     public String deleteTask(@PathVariable Long id) {
         taskService.deleteTask(id);
         return "redirect:/tasks";
     }
 
-    // Eksport zadań do CSV
     @GetMapping("/tasks/download")
-    public void downloadTasksCsv(HttpServletResponse response) throws IOException {
+    public void downloadCsv(HttpServletResponse response) throws IOException {
         response.setContentType("text/csv; charset=UTF-8");
         response.setHeader("Content-Disposition", "attachment; filename=zadania.csv");
 
-        // Pobranie wszystkich zadań bez paginacji
         List<TaskDto> tasks = taskService.getAllTasksForCsv();
 
-        try (PrintWriter writer = new PrintWriter(response.getOutputStream(), true)) {
-            writer.println("ID,Tytuł,Opis,Status,Kategoria,Termin");
+        try (PrintWriter writer = response.getWriter()) {
+            writer.println("ID;Tytuł;Opis;Status;Kategoria;Termin");
             for (TaskDto t : tasks) {
-                writer.printf("%d,%s,%s,%s,%s,%s%n",
+                writer.printf("%d;%s;%s;%s;%s;%s%n",
                         t.getId(),
-                        t.getTitle(),
-                        t.getDescription() != null ? t.getDescription() : "",
+                        escapeCsv(t.getTitle()),
+                        escapeCsv(t.getDescription() != null ? t.getDescription() : ""),
                         t.getStatus(),
-                        t.getCategoryName() != null ? t.getCategoryName() : "",
-                        t.getDueDate() != null ? t.getDueDate() : "");
+                        escapeCsv(t.getCategoryName() != null ? t.getCategoryName() : ""),
+                        t.getDueDate() != null ? t.getDueDate().toString() : "");
             }
         }
     }
 
+    private String escapeCsv(String value) {
+        if (value == null) return "";
+        return "\"" + value.replace("\"", "\"\"") + "\"";
+    }
 }
